Cambio de lenguaje agregado

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,3 +1,8 @@
 {
-  "message": "hello i18n !!"
+  "message": "Hello i18n !!",
+  "nav": {
+    "home": "Home",
+    "tutorial" : "Tutorial",
+    "getstarted" : "Get Started"
+  }
 }
