--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1,3 +1,8 @@
 {
-  "message": "Hola i18n !!"
+  "message": "Hola i18n !!",
+  "nav": {
+    "home": "Inicio",
+    "tutorial" : "Tutorial",
+    "getstarted" : "Empezar"
+  }
 }
